--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <h1 class="emoji-title">🏠 Welcome - Week of 5/5-5/9</h1>
     <p>Hey guys!
         Hope you’re all doing well! Here’s your friendly weekly roundup to keep us all in the loop. As always, if there’s anything I’ve missed or you need a hand with, just let me or another board member know.</p>
-    <p> 👋 This is your cozy dashboard to keep everything organized and stress-free. Use the menu above to navigate through your meeting notes, upcoming events, and reminders for the week.</p>
+    <p>Use the menu above to navigate through your meeting notes, upcoming events, and reminders for the week.</p>
     <p>Thanks everyone for all your hard work and support. Let’s have a great week!
         <p>Warm wishes </p>
         <p>-Your Secretary 💗</p>
