Meeting5/9index.html

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
     <h1 class="emoji-title">📝 Last Week’s Meeting Highlights</h1>
     <ul>
       <li>👥 Finalized officer roles for 2025/2026 School Year</li>
-      <li>🔅 Discussed the planning for the Cultural Luncheon: Check reminders</li>
-      <li>🕒 Collecting ideas about service events for the 2025/2026 calendar</li>
+      <li>🔅 Discussed the planning for the Cultural Luncheon- Check Reminders</li>
+      <li>🕒 Collecting numbers for the 2025/2026 Group Chat</li>
     </ul>
   </section>
 
@@ -173,9 +173,10 @@
   <section id="todos">
     <h1 class="emoji-title">🛠️ To-Dos & Reminders</h1>
     <ul>
-      <li>📬 Send list of food you're bringing for upcoming Luncheon - No reumbersments</li>
-      <li>🖨️ Create and print labels and posters for Cultural Luncheon</li>
-      <li>🗂️ Organize folder for End of School events</li>
+      <li>📬 Send list of specific dishes you're bringing for upcoming Luncheon to the board - No reumbersments</li>
+      <p>Anthony and Amani- Italian, Matthew- Russian, Danaka- Filipino, Trevor- Canadian (Poutine), Jaeda- Puerto Rican (Rice), Steffi- Dutch, Gabby- Indian, Umair- French Possible: Gina- Chinese</p>
+      <li>🖨️ Create and print labels and posters for Cultural Luncheon via the mentioned Advertizing Committing</li>
+      <li>🗂️ IF YOU WERE NOT AT THE MEEITNG ON 5/9: Send your phone number to Trinity</li>
       <li>🖋️ Ensure you sign your name on the Record Book (for new inductees)</li>
     </ul>
   </section>
