Meeting5/9index.html

--- a/index.html
+++ b/index.html
@@ -174,8 +174,9 @@
     <h1 class="emoji-title">🛠️ To-Dos & Reminders</h1>
     <ul>
       <li>📬 Send list of specific dishes you're bringing for upcoming Luncheon to the board - No reumbersments</li>
-      <p>Anthony and Amani- Italian, Matthew- Russian, Danaka- Filipino, Trevor- Canadian (Poutine), Jaeda- Puerto Rican (Rice), Steffi- Dutch, Gabby- Indian, Umair- French Possible: Gina- Chinese</p>
-      <li>🖨️ Create and print labels and posters for Cultural Luncheon via the mentioned Advertizing Committing</li>
+      <p>Anthony and Amani- Italian,    Matthew- Russian,     Danaka- Filipino,    Trevor- Canadian (Poutine),    Jaeda- Puerto Rican (Rice),    Steffi- Dutch,    Gabby- Indian,    Umair- French,    Possible: Gina- Chinese</p>
+      <li>🖨️ Consider out of school community activities for the 2025/2026 school year</li>
+      <p> An email with a link to a survey should be sent by the EOY in order to send your ideas to the board</p>
       <li>🗂️ IF YOU WERE NOT AT THE MEEITNG ON 5/9: Send your phone number to Trinity</li>
       <li>🖋️ Ensure you sign your name on the Record Book (for new inductees)</li>
     </ul>
