Meeting5/9index.html

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
       <li>👥 Finalized officer roles for 2025/2026 School Year</li>
       <li>🔅 Discussed the planning for the Cultural Luncheon- Check Reminders</li>
       <li>🕒 Collecting numbers for the 2025/2026 Group Chat</li>
+      <li>📚 Academic help offered by the Board- Inform us of any problems, if any</li>
     </ul>
   </section>
 
