--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <th>Event</th>
         <tr>
             <td>May 15</td>
-            <td>📢 NHS Meeting During Lunch in 9/10 English Room</td>
+            <td>📢 NHS Meeting During Lunch in Dr. Sturrock's Music Room</td>
           </tr>
       </tr>
       <tr>
