--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
     <p>Hey guys!
         Hope you’re all doing well! Here’s your friendly weekly roundup to keep us all in the loop. As always, if there’s anything I’ve missed or you need a hand with, just let me or another board member know.</p>
     <p>Use the menu above to navigate through your meeting notes, upcoming events, and reminders for the week.</p>
-    <p>Thanks everyone for all your hard work and support. Let’s have a great week!
-        <p>Warm wishes </p>
+    <p>Thank you everyone for all your hard work for the luncheon. Let’s have a great week!</p>
+        <p>Warm wishes,</p>
         <p>-Your Secretary 💗</p>
   </section>
 
   <section id="highlights">
     <h1 class="emoji-title">📝 Last Week’s Meeting Highlights</h1>
     <ul>
-      <li>👥 Finalized officer roles for 2025/2026 School Year</li>
-      <li>🔅 Discussed the planning for the Cultural Luncheon- Check Reminders</li>
-      <li>🕒 Collecting numbers for the 2025/2026 Group Chat</li>
+      <li>👥 Created 2 seperate group chats for NHS for updates(one for 11th grade and another for 10th)</li>
+      <li>🔅 Discussed more planning for the Cultural Luncheon- check reminders</li>
+      <li>✒️ Signed names in the Record Book to keep track of inductees</li>
       <li>📚 Academic help offered by the Board- Inform us of any problems, if any</li>
     </ul>
   </section>
@@ -175,10 +175,9 @@
     <h1 class="emoji-title">🛠️ To-Dos & Reminders</h1>
     <ul>
       <li>📬 Send list of specific dishes you're bringing for upcoming Luncheon to the board - No reumbersments</li>
-      <p>Anthony and Amani- Italian,    Matthew- Russian,     Danaka- Filipino,    Trevor- Canadian (Poutine),    Jaeda- Puerto Rican (Rice),    Steffi- Dutch,    Gabby- Indian,    Umair- French,    Possible: Gina- Chinese</p>
+      <p> Matthew- Russian Pryaniki and Baikal Soda, Amani and Anthony- Fruit? and Chicken Alfredo, Tabitha- Spaghetti Bolognese, Elisha- Dalla's Meatballs and Guacamole, Danaka- Lumpia, Poutine- Trevor, Gabby- Lamb Korma, Umair- Macarons, Jaeda- Puerto Rican Arroz and Gandules, Gianna- Hummus and Vegetables, Trinity- Peruvian Chicken</p>
       <li>🖨️ Consider out of school community activities for the 2025/2026 school year</li>
       <p> An email with a link to a survey should be sent by the EOY in order to send your ideas to the board</p>
-      <li>🗂️ IF YOU WERE NOT AT THE MEEITNG ON 5/9: Send your phone number to Trinity</li>
       <li>🖋️ Ensure you sign your name on the Record Book (for new inductees)</li>
     </ul>
   </section>
