--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
       <li>🔅 Discussed more planning for the Cultural Luncheon- check reminders</li>
       <li>✒️ Signed names in the Record Book to keep track of inductees</li>
       <li>📚 Academic help offered by the Board- Inform us of any problems, if any</li>
+      <li>Needed volunteers to set up before the Luncheon on Friday- All senior members are currently helping </li>
     </ul>
   </section>
 
