--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <h1 class="emoji-title">🛠️ To-Dos & Reminders</h1>
     <ul>
       <li>📬 Send list of specific dishes you're bringing for upcoming Luncheon to the board - No reumbersments</li>
-      <p> Matthew- Russian Pryaniki and Baikal Soda, Amani and Anthony- Fruit? and Chicken Alfredo, Tabitha- Spaghetti Bolognese, Elisha- Dalla's Meatballs and Guacamole, Danaka- Lumpia, Poutine- Trevor, Gabby- Lamb Korma, Umair- Macarons, Jaeda- Puerto Rican Arroz and Gandules, Gianna- Hummus and Vegetables, Trinity- Peruvian Chicken</p>
+      <p> Matthew- Russian Pryaniki and Baikal Soda, Amani and Anthony- Fruit? and Chicken Alfredo, Tabitha- Spaghetti Bolognese, Elisha- Dalla's Meatballs and Guacamole, Danaka- Lumpia, Poutine- Trevor, Gabby- Lamb Korma, Umair- Eclairs, Jaeda- Puerto Rican Arroz and Gandules, Gianna- Hummus and Vegetables, Trinity- Peruvian Chicken</p>
       <li>🖨️ Consider out of school community activities for the 2025/2026 school year</li>
       <p> An email with a link to a survey should be sent by the EOY in order to send your ideas to the board</p>
       <li>🖋️ Ensure you sign your name on the Record Book (for new inductees)</li>
