--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -132,9 +132,9 @@
   <section id="home">
     <h1 class="emoji-title">🏠 Welcome - Week of 5/12-5/16</h1>
     <p>Hey guys!
-        Hope you’re all doing well! Here’s your friendly weekly roundup to keep us all in the loop. As always, if there’s anything I’ve missed or you need a hand with, just let me or another board member know.</p>
+        Welcome to the new school year! Hope you’re all doing well. Here’s your friendly weekly roundup to keep us all in the loop. As always, if there’s anything I’ve missed or you need a hand with, just let me or another board member know.</p>
     <p>Use the menu above to navigate through your meeting notes, upcoming events, and reminders for the week.</p>
-    <p>Thank you everyone for all your hard work for the luncheon. Let’s have a great week!</p>
+    <p>Let’s have a great week!</p>
         <p>Warm wishes,</p>
         <p>-Your Secretary 💗</p>
   </section>
@@ -142,11 +142,7 @@
   <section id="highlights">
     <h1 class="emoji-title">📝 Last Week’s Meeting Highlights</h1>
     <ul>
-      <li>👥 Created 2 seperate group chats for NHS for updates(one for 11th grade and another for 10th)</li>
-      <li>🔅 Discussed more planning for the Cultural Luncheon- check reminders</li>
-      <li>✒️ Signed names in the Record Book to keep track of inductees</li>
-      <li>📚 Academic help offered by the Board- Inform us of any problems, if any</li>
-      <li>Needed volunteers to set up before the Luncheon on Friday- All senior members are currently helping </li>
+      <li>🏃 Discussed the Color Run (Check texts and reminders for details)</li>
     </ul>
   </section>
 
@@ -159,12 +155,12 @@
 
       </tr>
       <tr>
-        <td>May 16</td>
-        <td>🍱 Cultural Luncheon @ the MS/US Commons</td>
+        <td>Sunday, Sept. 21st </td>
+        <td>👟 Color Run @ Calverton (near Veteran's field)</td>
       </tr>
       <tr>
-        <td>June 11</td>
-        <td>📦 End of School</td>
+        <td>Sunday, Sept. 26th</td>
+        <td>📦 No School!!</td>
       </tr>
     </table>
   </section>
@@ -172,11 +168,11 @@
   <section id="todos">
     <h1 class="emoji-title">🛠️ To-Dos & Reminders</h1>
     <ul>
-      <li>📬 Send list of specific dishes you're bringing for upcoming Luncheon to the board - No reumbersments</li>
-      <p> Matthew- Russian Pryaniki and Baikal Soda, Amani and Anthony- Fruit? and Chicken Alfredo, Tabitha- Spaghetti Bolognese, Elisha- Dalla's Meatballs and Guacamole, Danaka- Lumpia, Poutine- Trevor, Gabby- Lamb Korma, Umair- Eclairs, Jaeda- Puerto Rican Arroz and Gandules, Gianna- Hummus and Vegetables, Trinity- Peruvian Chicken</p>
-      <li>🖨️ Consider out of school community activities for the 2025/2026 school year</li>
-      <p> An email with a link to a survey should be sent by the EOY in order to send your ideas to the board</p>
-      <li>🖋️ Ensure you sign your name on the Record Book (for new inductees)</li>
+      <li>📬 Let a board member know if you plan to attend the color run</li>
+      <p> Please arrive no later than 8:30 am, volunteers should be in their place by 9</p>
+      <p> Bring bug spray (if desired) and wear hats and appropriate clothing (that you wouldn't mind getting dirty)</p>
+      <li>🖨️ Sign the form to become a Homework Helper </li>
+      <p> A paper was given out to get a gauge of schedules, which requires both your signature and your guardian's.</p>
     </ul>
   </section>
 
