--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@ l<!DOCTYPE html>
       <p> Bring bug spray (if desired) and wear hats and appropriate clothing (that you wouldn't mind getting dirty)</p>
       <li>🖨️ Sign the form to become a Homework Helper </li>
       <p> A paper was given out to get a gauge of schedules, which requires both your signature and your guardian's.</p>
+      <li> 🐇 Check outlook on destop/mobile browser (and Go to Groups)</li>
+      <p> An outlook group has been created for NHS this year; it includes links to this website, important documents, events, and email reminders about meetings. If you have trouble accessing anything please let a board member know!!</p>
+      <p> If under Mail -> Home, then you should see a tab to Go to Groups. After you find the group for this year, please make sure to favorite it so emails can appear easily in your inbox.</p>
     </ul>
   </section>
 
